mailnews/imap/src/nsImapProtocol.cpp
@@ -4857,9 +4857,7 @@ void nsImapProtocol::NotifyMessageFlags(imapMessageFlagsType flags,
   if (m_imapMessageSink) {
     // if we're selecting the folder, don't need to report the flags; we've
     // already fetched them.
-    if (m_imapAction != nsIImapUrl::nsImapSelectFolder &&
-        (m_imapAction != nsIImapUrl::nsImapMsgFetch ||
-         (flags & ~kImapMsgRecentFlag) != kImapMsgSeenFlag))
+    if (m_imapAction != nsIImapUrl::nsImapSelectFolder)
       m_imapMessageSink->NotifyMessageFlags(flags, keywords, key,
                                             highestModSeq);
   }
